<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>pl.idedyk.japanese</groupId>
	<artifactId>JapaneseDictionary</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- maven-compiler-plugin -->
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>

		<!-- other plugin versions -->
		<version.compiler.plugin>3.15.0</version.compiler.plugin>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>net.htmlparser.jericho</groupId>
			<artifactId>jericho-html</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
    			<artifactId>commons-codec</artifactId>
        		<version>1.15</version>
        	</dependency>
		<dependency>
			<groupId>net.sourceforge.javacsv</groupId>
			<artifactId>javacsv</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.18</version>
		</dependency>
		<dependency>
			<groupId>org.dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>2.1.3</version>
		</dependency>
		<dependency>
			<groupId>jaxen</groupId>
    			<artifactId>jaxen</artifactId>
        		<version>1.1.4</version>
        	</dependency>
		<dependency>
			<groupId>pl.idedyk.japanese</groupId>
			<artifactId>JapaneseDictionaryAPI</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>pl.idedyk.japanese</groupId>
			<artifactId>JapaneseDictionaryLuceneCommon</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>

		<dependency>
		    <groupId>com.atilika.kuromoji</groupId>
		    <artifactId>kuromoji-core</artifactId>
		    <version>0.9.0</version>
		</dependency>

		<dependency>
		    <groupId>com.atilika.kuromoji</groupId>
		    <artifactId>kuromoji-ipadic</artifactId>
		    <version>0.9.0</version>
		</dependency>

		<dependency>
		    <groupId>com.atilika.kuromoji</groupId>
		    <artifactId>kuromoji-unidic</artifactId>
		    <version>0.9.0</version>
		</dependency>

		<dependency>
		    <groupId>com.atilika.kuromoji</groupId>
		    <artifactId>kuromoji-jumandic</artifactId>
		    <version>0.9.0</version>
		</dependency>

		<dependency>
		    <groupId>com.atilika.kuromoji</groupId>
		    <artifactId>kuromoji-unidic-kanaaccent</artifactId>
		    <version>0.9.0</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20150729</version>
		</dependency>
		
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
		    <groupId>commons-cli</groupId>
		    <artifactId>commons-cli</artifactId>
		    <version>1.3.1</version>
		</dependency>

		<dependency>
		    <groupId>commons-lang</groupId>
		    <artifactId>commons-lang</artifactId>
		    <version>2.6</version>
		</dependency>

	</dependencies>

<!--	<build>
		<directory>target</directory>
		<outputDirectory>target/classes</outputDirectory>
		<finalName>${artifactId}-${version}</finalName>
		<testOutputDirectory>target/test-classes</testOutputDirectory>
		<sourceDirectory>src/main/java</sourceDirectory>
		<scriptSourceDirectory>src/main/scripts</scriptSourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
	</build>
-->
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.compiler.plugin}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
